# hacl-packages

./: .cla_affiliations  .clabot  .drone.yml  .gitignore  404.html  CHANGELOG.md  CLA.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.h.in  Doxyfile  LICENSE  Makefile  PreLoad.cmake  README.md  Readme.md  _build.sh  algorithms.html  architectures.html  config.json  configure-old.sh  cpu-features.md  index.html  info.txt  installation.html  mach  mach.py  mach.sh  make-dist.py  npm.sh  opam.sh  platforms.html  print.html  searchindex.js  searchindex.json  update.py
.ci/: kitware-archive.sh
.github/workflows/: benchmark_pull_request.yml  build.yml  build_pull_request.yml  coverage.yml  examples.yml  gh-pages.yml  js.yml  new_issue.yml  ocaml-docs.yml  ocaml.yml  rust.yml  (+2 more)
benchmarks/: aesgcm.cc  blake.cc  chacha20.cc  chacha20poly1305.cc  drbg.cc  ed25519.cc  hmac.cc  k256.cc  kdf.cc  kyber.cc  nacl.cc  openssl_rsa.h  p256-standalone.cc  p256.cc  rsa.cc  rsapss.cc  sha1.cc  sha2.cc  sha3.cc  util.h  x25519.cc
config/: Config.h.in  aarch64-android.cmake  aarch64-darwin.cmake  aarch64-ios.cmake  bug81300.c  config.cmake  config.json  constants.cmake  default_config.cmake  default_config.h  default_config_msvc.cmake  default_config_msvc.h  dep_config.json  explicit_bzero.c  int128.c  options.cmake  osx_c.sh  s390x.cmake  toolchain.cmake  vec128.c  vec256.c  x64-darwin.cmake
developers/: build-process.html  ci.html  index.html  ocaml-build.html  repo-overview.html  rust-build.html
docker/: Dockerfile  build.sh
docs/: book.toml
examples/cmake/: CMakeLists.txt  Readme.md  blake-example.cc
hacl-c/: evercrypt-aead.html  evercrypt-apis.html  evercrypt-hashing.html  evercrypt-hkdf.html  evercrypt-hmac.html  evercrypt-randomness.html  hacl-aead.html  hacl-apis.html  hacl-ecdh.html  hacl-hashing.html  hacl-hkdf.html  hacl-hmac.html  hacl-nacl.html  hacl-randomness.html  hacl-signatures.html  index.html
hacl-js/: index.html
hacl-ocaml/: index.html
hacl-rust/: aead.html  index.html
include/: Hacl_AES_128_CTR32_BitSlice.h  Hacl_AES_128_GCM_NI.h  Hacl_AES_256_CTR32_BitSlice.h  Hacl_AES_256_GCM_CT64.h  Hacl_AES_256_GCM_NI.h  Hacl_Blake2s_128.h  Hacl_Curve25519_64.h  Hacl_Hash_SHA3.h  Hacl_Hash_SHA3_Scalar.h  Hacl_Hash_SHA3_Simd256.h  Hacl_P256.h  Hacl_P384.h  Hacl_P521.h  Hacl_RSA.h  config.h  evercrypt_targetconfig.h  lib_intrinsics.h  libintvector.h
js/: api.js  api.json  api_test.js  package-lock.json  package.json  test.html  test3.js
libcrux/: mitch-and-sam.sh  standalone-kyber.sh  test.c
mach/: build.html  index.html  test.html
ocaml/: .gitignore  META  Makefile  config.h  ctypes.depend  hacl-star-raw.opam  setup.py
ocaml/hacl-star/: CHANGES.md  EverCrypt.ml  EverCrypt.mli  Hacl.ml  Hacl.mli  SharedDefs.ml  SharedFunctors.ml  dune  hacl-star.opam
ocaml/hacl-star/tests/: hash_test.ml  k256_test.ml  poly1305_test.ml
rust/: .gitignore  Cargo.toml  README.md  build.rs
rust/.cargo/: config.toml
rust/benches/: aead.rs  benchmark.rs
rust/evercrypt-rs/: README.md
rust/evercrypt-rs/tests/: test_aead.rs  test_ed25519.rs  test_hkdf.rs  test_hmac.rs  test_p256_ecdh.rs  test_p256_ecdsa.rs  test_x25519.rs
rust/evercrypt-sys/: Cargo.toml  build.rs
rust/evercrypt-sys/src/bindings/: bindings.rs
rust/fuzz/fuzz_targets/: aead.rs  ecdh.rs  ed25519.rs
rust/hacl-rust-sys/: Cargo.toml  build.rs  wrapper.h
rust/hacl-rust-sys/src/: hacl_bindings.rs
rust/hacl-rust-sys/src/bindings/: bindings.rs
rust/hacl-star-sys/: Cargo.toml  build.rs  metadata.json  wrapper.h
rust/hacl-star-sys/src/: hacl_bindings.rs
rust/hacl-star-sys/src/bindings/: bindings.rs
rust/hacl-sys/: Cargo.toml  README.md  build.rs  wrapper.h
rust/hacl-sys/src/: hacl_bindings.rs  lib.rs
rust/hacl-sys/src/bindings/: bindings.rs
rust/src/: aead.rs  bignum.rs  digest.rs  ecdh.rs  ed25519.rs  hacl.rs  hazmat.rs  hkdf.rs  hmac.rs  lib.rs  p256.rs  prelude.rs  rand_util.rs  raw.rs  rsa_pss.rs  signature.rs  x25519.rs
rust/src/hacl/: blake2.rs  chacha20_poly1305.rs  curve25519.rs  p256.rs  sha2.rs
rust/src/hazmat/: Readme.md  aesgcm.rs  blake2.rs  chacha20_poly1305.rs  curve25519.rs  drbg.rs  ed25519.rs  hkdf.rs  hmac.rs  p256.rs  sha2.rs  sha3.rs
rust/tests/: aead-book.rs  bignum_gen_tests.py  test_aead.rs  test_bignum.rs  test_blake2.rs  test_ed25519.rs  test_hkdf.rs  test_hmac.rs  test_p256_ecdh.rs  test_p256_ecdsa.rs  test_rsa_pss.rs  test_sha.rs  test_signatures.rs  test_util.rs  test_x25519.rs
src/: EverCrypt_AEAD.c  Hacl_AES_128_CTR32_BitSlice.c  Hacl_AES_128_CTR32_NI.c  Hacl_AES_128_GCM_CT64.c  Hacl_AES_128_GCM_M32.c  Hacl_AES_256_CTR32_BitSlice.c  Hacl_AES_256_GCM_CT64.c  Hacl_Bignum.c  Hacl_Bignum256.c  Hacl_Bignum256_32.c  Hacl_Bignum32.c  Hacl_Bignum4096.c  Hacl_Bignum4096_32.c  Hacl_Bignum64.c  Hacl_Chacha20.c  Hacl_Chacha20Poly1305_32.c  Hacl_Chacha20_Vec32.c  Hacl_Curve25519_51.c  Hacl_Curve25519_64.c  Hacl_GenericField32.c  Hacl_GenericField64.c  Hacl_Gf128_CT64.c  Hacl_Gf128_NI.c  Hacl_Gf128_PreComp.c  Hacl_HMAC_Blake2b_256.c  Hacl_HMAC_Blake2s_128.c  Hacl_HPKE_P256_CP128_SHA256.c  Hacl_HPKE_P256_CP256_SHA256.c  Hacl_HPKE_P256_CP32_SHA256.c  Hacl_Hash_Blake2.c  Hacl_Hash_Blake2b_256.c  Hacl_Hash_Blake2s_128.c  Hacl_Hash_SHA3.c  Hacl_Hash_SHA3_Scalar.c  Hacl_Hash_SHA3_Simd256.c  Hacl_P256.c  Hacl_P384.c  Hacl_P521.c  Hacl_RSA.c  Hacl_RSAPSS.c  (+3 more)
tests/: README.md  aead.cc  bignum.cc  blake2_vectors.h  blake2b.c  blake2b.cc  blake2s.c  blake2s.cc  chacha20poly1305.cc  chacha20poly1305_vectors.h  curve25519_vectors.h  detection.cc  drbg.cc  ed25519.cc  evercrypt.cc  evercrypt.h  generic_field.cc  hkdf.cc  hmac.cc  k256_ecdh.cc  k256_ecdsa.cc  kyber.cc  kyber768.cc  md5.cc  nacl.cc  p256.c  p256.cc  p256_ecdh.cc  p256_ecdsa.cc  p256k1_ecdsa.cc  p384_ecdh.cc  p384_ecdsa.cc  p521_ecdh.cc  p521_ecdsa.cc  poly1305.cc  rsa.cc  rsapss.cc  sha1.cc  sha2.cc  sha3-mb.cc  (+4 more)
tools/: benchmark.py  configure.py  convert-rsp.py  coverage.sh  doc.py  js.py  macos.py  ocaml.py  openssl.py  rust.py  test.py  update.py  utils.py  vcbuild.cmd  vcs.py
(+378 files in other folders)
